# rsync-s3

./: README.md  go.mod  go.sum
cmd/: BUILD.bazel
cmd/rsync-oss/: BUILD.bazel  main.go
pkg/backend/: backend.go
pkg/config/: BUILD.bazel  config.go
pkg/core/: BUILD.bazel  aws.go
pkg/rsync/: consts.go  demux.go  flist.go  net.go  rsync.go  rsync_test.go  sum.go
pkg/types/: file.go  filelist.go  filelist_test.go
