filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//deploy/rsync-oss/cmd/rsync-oss:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
