load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/dashjay/rsync-s3/cmd/rsync-oss",
    visibility = ["//visibility:private"],
    deps = [
        "//deploy/rsync-oss/pkg/config:go_default_library",
        "//deploy/rsync-oss/pkg/core:go_default_library",
        "@com_github_schollz_progressbar_v3//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "rsync-oss",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
