load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "aws.go",
        "consts.go",
        "demux.go",
        "flist.go",
        "net.go",
        "rsync.go",
        "sum.go",
    ],
    importpath = "github.com/dashjay/rsync-s3/pkg/core",
    visibility = ["//visibility:public"],
    deps = [
        "//deploy/rsync-oss/pkg/config:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
        "@com_github_schollz_progressbar_v3//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_crypto//md4:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
